# colour-in-backend

./: Dockerfile  Pipfile  pyproject.toml  taskdef.json
.github/workflows/: build-test-upload-ecr.yml  build_upload.yml  deploy-ecs.yml  deploy_ecs_prod.yml  deploy_ecs_test.yml  ecr-ecs-full-workflow.yml
app/: image_function.py  main.py  schemas.py  test_main.py
aws/: appspec.yml  build.sh  buildspec.yml  common.tf  deploy.sh  ecs.tf  taskdef.json
ecs/: build.sh  deploy.sh  ecs.tf  taskdef.json  variables.tf
src/: main.py
